--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/webmention.css" />
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <link rel="alternate" title="{{ site.name }} - {{ site.description }}" type="application/json" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
-<link rel="webmention" href="https://brid.gy/publish/webmention" />
-<link rel="canonical" href="http://diggingthedigital.com/{{page.url}}" />
+<link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
   </head>
 
   <body>
