--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 
          <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/opml">OPML</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/blogroll">Blogroll</a>
             <a href="https://micro.blog/frank" rel="me" />Micro.blog</a>
