--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 <link rel="alternate" title="{{ site.name }} - {{ site.description }}" type="application/json" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
 <link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
-<link rel="micropub" href="https://frankmeeuwsen.xyz/micropub/main">
+<link rel="micropub" href="https://micropub-to-github-microblog.herokuapp.com/micropub/main">
 <link href="https://twitter.com/FrankLeTest" rel="me">
   </head>
 
