--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
 <link rel="micropub" href="https://micropub-to-github-microblog.herokuapp.com/micropub/main">
-<link href="https://twitter.com/FrankLeTest" rel="me">
+<link href="https://frank.micro.blog" rel="me">
   </head>
 
   <body>
