--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <a href="{{ site.baseurl }}/opml">OPML</a>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/blogroll">Blogroll</a>
-            <a href="https://micro.blog/frank" rel="me" />Micro.blog</a>
+            <a href="https://frank.micro.blog" />Micro.blog</a>
           </nav>
         </header>
       </div>
