--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
 <link rel="micropub" href="https://micropub-to-github-microblog.herokuapp.com/micropub/main">
 <link href="https://frank.micro.blog" rel="me">
+<link href="https://github.com/frankmeeuwsen" rel="me">
   </head>
 
   <body>
