--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,16 @@
 <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/webmention.css" />
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <link rel="alternate" title="{{ site.name }} - {{ site.description }}" type="application/json" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
-<link rel="webmention" href="https://webmention.herokuapp.com/api/webmention" />
+
+<link rel="pingback" href="https://webmention.io/8c1caf47.ngrok.io/xmlrpc" />
+<link rel="webmention" href="https://webmention.io/8c1caf47.ngrok.io/webmention" />
+
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
+
 <link rel="micropub" href="https://micropub-to-github-microblog.herokuapp.com/micropub/main">
-<link href="https://frank.micro.blog" rel="me">
 <link href="https://github.com/frankmeeuwsen" rel="me">
+{% webmentions_head %}
   </head>
 
   <body>
@@ -71,6 +75,6 @@
         </footer>
       </div>
     </div>
-
+    {% webmentions_js %}
   </body>
 </html>
