--- a/_includes/post/meta.html
+++ b/_includes/post/meta.html
@@ -2,4 +2,5 @@
   <span class="date dt-published">{% include post/date.html %}{{ time }}</span>
   <span class="edit">{% include post/edit.html %}</span>
    <span class="history">{% include post/history.html %}</span>
+   <span class="edit">Leestijd: {{ content | reading_time }}</span>
 </div>
