--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,8 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <link rel="alternate" title="{{ site.name }} - {{ site.description }}" type="application/json" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
 
-<link rel="pingback" href="https://webmention.io/8c1caf47.ngrok.io/xmlrpc" />
-<link rel="webmention" href="https://webmention.io/8c1caf47.ngrok.io/webmention" />
+<link rel="webmention" href="https://webmention.io/ecstatic-jang-1b098a.netlify.com/webmention" />
+<link rel="pingback" href="https://webmention.io/ecstatic-jang-1b098a.netlify.com/xmlrpc" />
 
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
