--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,8 +11,7 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 <link rel="alternate" title="{{ site.name }} - {{ site.description }}" type="application/json" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
 
-<link rel="webmention" href="https://webmention.io/ecstatic-jang-1b098a.netlify.com/webmention" />
-<link rel="pingback" href="https://webmention.io/ecstatic-jang-1b098a.netlify.com/xmlrpc" />
+{% webmentions_head %}
 
 <link rel="token_endpoint" href="https://tokens.indieauth.com/token">
 <link rel="authorization_endpoint" href="https://indieauth.com/auth">
@@ -75,6 +74,5 @@
         </footer>
       </div>
     </div>
-
-  </body>
+    {% webmentions_js %}
 </html>
